[project]
name = "modpack-downloader"
version = "0.1.3"
description = "A small downloader for my Minecraft modpacks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "platformdirs>=4.6.0",
    "requests>=2.32.5",
    "tomli>=2.4.0",
]
[project.scripts]
modpack-downloader = "modpack_downloader.main:show"
