[project]
name = "modpack-downloader"
version = "0.2.2"
description = "A small downloader for my Minecraft modpacks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "platformdirs>=4.6.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "tomli>=2.4.0",
]
[project.scripts]
modpack-downloader = "modpack_downloader.main:show"
